# bazel_crossbuild

./: .bazelrc  BUILD.bazel  README.md  WORKSPACE.bazel  rule.bzl
config/: BUILD.bazel
constraint/: BUILD.bazel
platform/: BUILD.bazel
platform/host/: BUILD.bazel
tools/: fail.sh  pass.sh
